# pzzld-eth-app

./: .env.example  .gitpod.yml  Cargo.toml  Dockerfile  README.md  package.json  svelte.config.js
.config/: pzzld.xtask.yaml
.github/: dependabot.yml
.github/workflows/: desktop.yml  docker.yml  rust.yml
client/: package.json
client/src/lib/: constants.js  index.js  markdown.js
client/src/lib/nav/toolbar/: Toolbar.svelte
client/src/lib/sections/: index.js
client/src/lib/sections/header/: index.js
client/src/routes/(dashboard)/: +layout.svelte  +page.svelte
client/src/routes/(dashboard)/blog/: [id].json.js  [slug].json.js  [slug].svelte
contracts/: package.json  truffle-config.js
contracts/src/: Accounts.sol
contracts/src/wallets/: Wallet.sol
contracts/src/wallets/multisig/: MultiSig.sol
desktop/: Cargo.toml  tauri.conf.json
frontend/: Dockerfile  package.json  svelte.config.js  vite.config.js
frontend/src/routes/: +page.svelte
frontend/src/routes/(dashboard)/: +layout.svelte  +page.svelte
src/lib/: index.js
src/lib/nav/sidebar/: Sidebar.svelte
src/lib/nav/toolbar/: Searchbar.svelte  Toolbar.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/(auth)/settings/: +page.svelte
wasm/: etherscan.cnf.toml  package.json
wasm/src/: lib.rs  utils.rs
wasm/src/actors/: mod.rs
wasm/src/api/: index.rs  mod.rs
wasm/tests/: default.rs
xtask/: Cargo.toml
xtask/src/: commands.rs  main.rs  utils.rs
xtask/src/args/: setup.rs
xtask/src/cli/: commands.rs  mod.rs
xtask/src/cli/args/: builder.rs  setup.rs
(+6 files in other folders)
